# sqlite

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/: cells.h  file.h  mem.h  page.h  read_headers.h  schema.h
src/: cells.c  file.c  main.c  main.cpp  mem.c  page.c  read_headers.c
